# ni-analysis-v2

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: candidate_generation.yaml  legacy_prompt_baseline.yaml  review_session.yaml
guides/: README.md  anaconda_workflow.md
results/candidate_runs/sample_01/: candidate_manifest.json
results/candidate_runs/sample_01_fallback_check/: candidate_manifest.json
results/candidate_runs/sample_01_sam_check/: candidate_manifest.json
results/candidate_runs/sample_01_smoke/: candidate_manifest.json
results/features/sample_01_smoke/: reviewed_features.csv  reviewed_features_by_morphology.csv  reviewed_features_summary.csv
results/review_sessions/sample_01_smoke/: sample_01_smoke_r1.review.json
results/reviewed/sample_01_smoke/: reviewed_dataset.csv  reviewed_dataset_manifest.json
scripts/: export_objectness_dataset.py  export_reviewed_dataset.py  extract_features_from_reviewed.py  legacy_run_text_prompt_baseline.py  review_session.py  run_candidate_generation.py  train_objectness_prior.py
src/ni_analysis/: __init__.py
src/ni_analysis/export/: reviewed_dataset_exporter.py
src/ni_analysis/features/: feature_table.py  morphology_features.py  roughness_features.py  spikiness_features.py
src/ni_analysis/prior/: __init__.py  objectness_model.py
src/ni_analysis/review/: review_io.py  review_schema.py  review_session_core.py
src/ni_analysis/segmentation/: candidate_generator.py  legacy_prompt_segmenter.py  mask_postprocess.py  sam_backend.py
src/ni_analysis/utils/: config_io.py  io_utils.py
tests/: conftest.py  test_cli_parsing.py  test_feature_helpers.py  test_review_flow.py
