[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ni-analysis-v2"
version = "0.1.0"
description = "Prompt-free candidate generation + HITL review + morphology quantification pipeline for SEM particle analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Beomseok Maeng" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "opencv-python-headless>=4.8",
  "Pillow>=10.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "scikit-image>=0.21",
  "tqdm>=4.66",
  "pyyaml>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ni-candidates = "scripts.run_candidate_generation:main"
ni-review = "scripts.review_session:main"
ni-export-reviewed = "scripts.export_reviewed_dataset:main"
ni-extract-features = "scripts.extract_features_from_reviewed:main"
ni-export-objectness = "scripts.export_objectness_dataset:main"
ni-train-objectness = "scripts.train_objectness_prior:main"
